# cim-ipld

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_STATUS.md  CONTENT_SERVICE.md  CONTENT_TYPES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PERSISTENCE_AND_ENCRYPTION.md  README.md  SECURITY.md  TEST_COVERAGE_FINAL_REPORT.md  TODO_IMPLEMENTATION_SUMMARY.md  USER_STORIES.md  coverage-report-detailed.md  flake.nix  implementation-summary.md  ipld-codecs.md  rustfmt.toml  test-coverage-analysis.md  test-summary.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: performance_bench.rs
docs/: CID_CALCULATION_GUIDE.md  DEVELOPER_GUIDE.md  DOMAIN_PARTITIONING.md  MIGRATION_GUIDE.md  TEST_COVERAGE_ASSESSMENT.md  TEST_IMPLEMENTATION_ROADMAP.md  USER_STORIES.md  api.md  architecture.md  persistence.md  test-implementation-summary.md
docs/api/: api-reference.md
docs/architecture/: cid-calculation.md  domain-partitioning.md  system-architecture.md
docs/features/: content-types.md  ipld-codecs.md  persistence-encryption.md
docs/guides/: developer-guide.md  migration-guide.md
docs/project/: implementation-status.md
docs/testing/: test-guide.md  test-report.md
examples/: basic_usage.rs  content_service_demo.rs  content_types_demo.rs  domain_partitioning_demo.rs  domain_partitioning_real_world_demo.rs  event_cid_example.rs  ipld_codecs_demo.rs  persistence_demo.rs  pull_from_jetstream.rs  transformation_demo.rs
src/: content_types.rs  error.rs  lib.rs  traits.rs  types.rs
src/chain/: mod.rs
src/codec/: ipld_codecs.rs  mod.rs
src/content_types/: encryption.rs  indexing.rs  persistence.rs  service.rs  transformers.rs
src/object_store/: content_storage.rs  domain_partitioner.rs  mod.rs  nats_object_store.rs  pull_utils.rs
tests/: CID_PERSISTENCE_TEST_RESULTS.md  README.md  backend_tests.rs  canonical_payload_tests.rs  chain_comprehensive_tests.rs  chain_validation_tests.rs  codec_integration_tests.rs  codec_tests.rs  codec_unit_tests.rs  comprehensive_user_stories.rs  comprehensive_user_stories_old.rs  concurrency_tests.rs  content_service_tests.rs  content_types_integration_tests.rs  content_types_test.rs  deduplication_tests.rs  domain_partitioning_integration_test.rs  domain_partitioning_performance_test.rs  domain_partitioning_samples_test.rs  domain_partitioning_test.rs  encryption_user_stories.rs  error_handling_tests.rs  error_propagation_tests.rs  event_flow_tests.rs  integration_tests.rs  ipld_codecs_test.rs  jetstream_cid_persistence_tests.rs  load_tests.rs  metadata_tests.rs  migration_tests.rs  nats_object_store_integration.rs  object_store_unit_tests.rs  persistence_test.rs  property_tests.rs  pull_cid_from_jetstream_test.rs  security_tests.rs  stress_tests.rs
tests/common/: mod.rs
tests/infrastructure/: mod.rs  test_cid_chain.rs  test_content_addressing.rs  test_event_stream.rs  test_message_routing.rs  test_nats_connection.rs  test_nats_object_store.rs
tests/integration/: e2e_tests.rs
