[package]
name = "cim-ipld"
version = "0.1.0"
edition = "2021"
authors = ["The Cowboy AI Team"]
description = "IPLD implementation for Composable Information Machines"
repository = "https://github.com/thecowboyai/cim-ipld"
license = "Apache-2.0 OR MIT"
keywords = ["ipld", "cid", "content-addressing", "cim", "dag"]
categories = ["data-structures", "encoding", "cryptography"]

[dependencies]
cid = "0.11"
multihash = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
thiserror = "2.0"
bytes = "1.5"

# NATS Object Store dependencies
async-nats = { version = "0.41", features = ["service"] }
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"
zstd = "0.13"
lru = "0.12"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1.10", features = ["v4"] }

[features]
default = []
